src/objects/Zuora__Refund__c.object
<CustomObject>
    <description>The Refund object is used to create and query refunds. 

Note that refunds imply that money has been returned to customers. You should use adjustments (credit memos) if you are issuing credit to customers, but are not returning funds to a customer.</description>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CRM Account that this payment is related to.</description>
        <inlineHelpText>The CRM Account that this payment is related to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AccountingCode__c</fullName>
        <description>Zuora will automatically populate the accounting code for the refund for the payment or invoice line item that it applies to. If there was no AccountingCode, then this remains Null.</description>
        <inlineHelpText>Zuora will automatically populate the accounting code for the refund for the payment or invoice line item that it applies to. If there was no AccountingCode, then this remains Null.</inlineHelpText>
        <label>Accounting Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Amount__c</fullName>
        <description>The amount the refund. Cannot exceed the amount of the payment the refund is applied to.</description>
        <inlineHelpText>The amount the refund. Cannot exceed the amount of the payment the refund is applied to.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingAccount__c</fullName>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Zuora__Comment__c</fullName>
        <description>Use this optional field to add a note to the refund.</description>
        <inlineHelpText>Use this optional field to add a note to the refund.</inlineHelpText>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedById__c</fullName>
        <description>The Zuora system automatically generates the ID of the user who created the object.</description>
        <inlineHelpText>The Zuora system automatically generates the ID of the user who created the object.</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__CreatedDate__c</fullName>
        <description>The Zuora system automatically generates this value, which records when the object was created.</description>
        <inlineHelpText>The Zuora system automatically generates this value, which records when the object was created.</inlineHelpText>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__GatewayResponseCode__c</fullName>
        <description>The code returned from the payment gateway for the payment. This code is gateway-dependent.</description>
        <inlineHelpText>The code returned from the payment gateway for the payment. This code is gateway-dependent.</inlineHelpText>
        <label>Gateway Response Code</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__GatewayResponse__c</fullName>
        <description>The message returned from the payment gateway for a given payment, if any. This is gateway dependent.</description>
        <inlineHelpText>The message returned from the payment gateway for a given payment, if any. This is gateway dependent.</inlineHelpText>
        <label>Gateway Response</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentMethod__c</fullName>
        <description>A valid PaymentMethod ID indicating the method being used to make the payment.</description>
        <inlineHelpText>A valid PaymentMethod ID indicating the method being used to make the payment.</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>ACH,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCard,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DebitCard,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCardReferenceTransaction,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankTransfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The reference of a previous payment to which a refund is applied.</description>
        <inlineHelpText>The reference of a previous payment to which a refund is applied.</inlineHelpText>
        <label>Payment</label>
        <referenceTo>Zuora__Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__ReasonCodeName__c</fullName>
        <description>Reason for refund</description>
        <inlineHelpText>Reason for refund</inlineHelpText>
        <label>Reason Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__ReferenceId__c</fullName>
        <description>The reference of the gateway transaction. This field is returned by the gateway for electronic refunds.</description>
        <inlineHelpText>The reference of the gateway transaction. This field is returned by the gateway for electronic refunds.</inlineHelpText>
        <label>Reference ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundDate__c</fullName>
        <description>The date of the refund. The date of the refund cannot be before the Payment date.</description>
        <inlineHelpText>The date of the refund. The date of the refund cannot be before the Payment date.</inlineHelpText>
        <label>Refund Date (Deprecated)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundMethodType__c</fullName>
        <description>Denotes how an external refund was issued (paid out) to a customer.
This field is required if you are using external refunds.</description>
        <inlineHelpText>Denotes how an external refund was issued (paid out) to a customer.
This field is required if you are using external refunds.</inlineHelpText>
        <label>Refund Method Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACH,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCard,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayPal,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WireTransfer,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DebitCard,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CreditCardReferenceTransaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BankTransfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundTransactionTime__c</fullName>
        <description>The date and time when the refund was issued.</description>
        <inlineHelpText>The date and time when the refund was issued.</inlineHelpText>
        <label>Refund Transaction Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__Refund_Date__c</fullName>
        <description>The date of the refund. The date of the refund cannot be before the Payment date.</description>
        <inlineHelpText>The date of the refund. The date of the refund cannot be before the Payment date.</inlineHelpText>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__SoftDescriptorPhone__c</fullName>
        <label>Soft Descriptor Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SoftDescriptor__c</fullName>
        <label>Soft Descriptor</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__SourceType__c</fullName>
        <description>Specifies whether the refund is a refund payment or a credit balance.</description>
        <inlineHelpText>Specifies whether the refund is a refund payment or a credit balance.</inlineHelpText>
        <label>Source Type</label>
        <picklist>
            <picklistValues>
                <fullName>CreditBalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <description>The status of the refund. These statuses are determined by the system.</description>
        <inlineHelpText>The status of the refund. These statuses are determined by the system.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__TransferredToAccounting__c</fullName>
        <description>Specifies whether or not the object has been transferred to an external accounting system.</description>
        <inlineHelpText>Specifies whether or not the object has been transferred to an external accounting system.</inlineHelpText>
        <label>Transferred to Accounting</label>
        <picklist>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ignore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__Type__c</fullName>
        <description>Specifies if the refund is electronic or external.</description>
        <inlineHelpText>Specifies if the refund is electronic or external.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electronic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedById__c</fullName>
        <description>The Zuora system automatically generates this ID of the user who last updated the object.</description>
        <inlineHelpText>The Zuora system automatically generates this ID of the user who last updated the object.</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__UpdatedDate__c</fullName>
        <description>The Zuora system automatically generates this to record when the object was last updated.</description>
        <inlineHelpText>The Zuora system automatically generates this to record when the object was last updated.</inlineHelpText>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <label>Refund</label>
    <nameField>
        <label>Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>